--- a/celltype_annotation/analysis/copykat-rms-exploration.Rmd
+++ b/celltype_annotation/analysis/copykat-rms-exploration.Rmd
@@ -10,7 +10,8 @@ params:
   local_data_dir: "../data"
   library_id: "SCPCL000488"
   sample_id: "SCPCS000262"
-  threads: 16
+  test: FALSE
+  threads: 4
 ---
   
 This notebook explores performance of the [`copyKat`](https://github.com/navinlabcode/copykat) package for calling tumor vs. normal cells in pediatric cancer scRNA-seq data.
@@ -56,12 +57,12 @@ output_dir <-  here::here("celltype_annotation",
 fs::dir_create(output_dir)
 
 # Output file that compares results for different distance parameters
-copykat_distance_sce <- file.path(output_dir,
-                                  glue::glue("{params$library}_copykat_distance_sce.rds"))
+copykat_distance_tsv <- file.path(output_dir,
+                                glue::glue("{params$library}_copykat_results_distance_parameters.tsv"))
 
 # Output file that compares results for different kscut parameters
-copykat_kscut_sce <- file.path(output_dir,
-                                  glue::glue("{params$library}_copykat_kscut_sce.rds"))
+copykat_kscut_tsv <- file.path(output_dir,
+                                glue::glue("{params$library}_copykat_results_kscut_parameters.tsv"))
 ```
 
 The next chunk defines some functions for analyzing results. for preparing `copyKat` classification results for visualization and then making a barplot.
@@ -124,7 +125,8 @@ compare_result_tables <- function(df, run_name) {
     dplyr::filter(copykat != "not.defined") |>
     # copykat values need to match submitter_binary values
     dplyr::mutate(copykat = ifelse(
-      copykat == "diploid", "Normal", "Tumor"
+      # use str_detect for test data
+      stringr::str_detect(copykat,"diploid"), "Normal", "Tumor"
     )) |>
     # Tumor should be first as the "positive" value
     dplyr::mutate(
@@ -165,6 +167,16 @@ if (!(file.exists(local_submitter_sce_path))) {
   sync_call <- glue::glue('op run -- aws s3 sync {params$s3_submitter_data_dir} {params$local_data_dir}/{params$sample_id} --exclude "*" --include "{submitter_annotated_sce_file}"')
   system(sync_call, ignore.stdout = TRUE) 
 }
+
+# read in initial SCE
+# if results have already been generated this won't actually be used,
+#  but it's not too big to have in memory even if that's the case.
+sce <- readr::read_rds(local_submitter_sce_path)
+
+# use a small SCE for testing, if specified
+if (params$test) {
+  sce <- sce[, 1:50]
+}
 ```
 
 
@@ -173,26 +185,36 @@ if (!(file.exists(local_submitter_sce_path))) {
 
 ### Run copyKat
 
-The `copyKat` [GitHub `README` file](https://github.com/navinlabcode/copykat/blob/master/README.md) includes this caveat about the `"distance"` parameter:
+The `copyKat` [GitHub `README` file](https://github.com/navinlabcode/copykat/blob/b795ff793522499f814f6ae282aad1aab790902f/README.md?plain=1#L67) includes this caveat about the `"distance"` parameter:
 
 > One struggling observation is that none of one clustering method could fit all datasets. In this version, I add a distance parameters for clustering that include "euclidean" distance and correlational distance, ie. 1-"pearson" and "spearman" similarity. In general, corretional distances tend to favor noisy data, while euclidean distance tends to favor data with larger CN segments.
 
-Therefore we'll begin by comparing `"euclidian"`, `"spearman"`, and `"pearson"` values for [this parameter](https://github.com/navinlabcode/copykat/blob/b795ff793522499f814f6ae282aad1aab790902f/R/copykat.R#L251-L255).
+Therefore we'll begin by comparing `"euclidean"`, `"spearman"`, and `"pearson"` values for [this parameter](https://github.com/navinlabcode/copykat/blob/b795ff793522499f814f6ae282aad1aab790902f/R/copykat.R#L251-L255).
 
 
 ```{r}
-# Only run copykat if the final SCE does not exist
-if (file.exists(copykat_distance_sce)) {
+# Only run copykat if the final TSV does not exist
+if (file.exists(copykat_distance_tsv)) {
   
-  sce <- readr::read_rds(copykat_distance_sce)
+  copykat_df <- readr::read_tsv(copykat_distance_tsv)
   
 } else {
+
+  # Initialize dataframe for storing copykat results
+  copykat_df <- tibble::tibble(
+    submitter = sce$celltype, 
+    # and a binary version for later classification assessment
+    submitter_binary = ifelse(
+      stringr::str_starts(submitter, "Tumor"), 
+      "Tumor", 
+      "Normal"
+    )
+  )
   
-  # Otherwise, read in initial SCE and run copyKat
-  sce <- readr::read_rds(local_submitter_sce_path)
-    
-  purrr::walk(
-    c("spearman", "pearson", "euclidean"), 
+  distance_parameters <- c("spearman", "pearson", "euclidan")
+  
+  copykat_results <- purrr::map(
+    distance_parameters, 
     \(distance_parameter) {
       
       copykat_result <- copykat(
@@ -200,23 +222,33 @@ if (file.exists(copykat_distance_sce)) {
         id.type = "E", # we have Ensembl gene ids, not the default gene symbols ("S")
         sam.name = glue::glue("{params$library_id}-{distance_parameter}"), # unique name for each 
         distance = distance_parameter, 
+        # attempt to turn off some outputs..
         plot.genes = FALSE,
+        output.seg = FALSE,
         n.cores = params$threads
       )
-      
-      # save prediction to sce
-      colname <- glue::glue("copykat_{distance_parameter}")
-      colData(sce)[[colname]] <- copykat_result$prediction$copykat.pred
       
       # export full result
       output_file <- file.path(output_dir,
                               glue::glue("{params$library}_copykat_{distance_parameter}.rds"))
       readr::write_rds(copykat_result, output_file)
+      
+            
+      # return predictions
+      return(copykat_result$prediction$copykat.pred)
     }
   )
   
-  # finally, export SCE with all copykat predictions
-  readr::write_rds(sce, copykat_distance_sce)
+  names(copykat_results) <- glue::glue("copykat_{distance_parameters}")
+  
+  # Bind up all the columns
+  copykat_df <- dplyr::bind_cols(
+    copykat_df, 
+    copykat_results
+  )
+  
+  # finally, export TSV with all copykat predictions
+  readr::write_tsv(copykat_df, copykat_distance_tsv)
 } 
 ```
 
@@ -226,19 +258,9 @@ if (file.exists(copykat_distance_sce)) {
 We'll prepare the data for comparison and begin with a barplot of tumor/normal classifications across `copyKat` parameters:
 
 ```{r}
-# Prepare data for comparisons
-copykat_df <- colData(sce) |>
-  as.data.frame() |>
-  # better printing 
-  tibble::as_tibble() |>
-  dplyr::select(submitter = celltype, contains("copykat")) |>
-  # remove NA submitter annotations
-  tidyr::drop_na(submitter) |>
-  dplyr::mutate(submitter_binary = ifelse(
-    stringr::str_starts(submitter, "Tumor"), 
-    "Tumor", 
-    "Normal"
-  )) 
+# Remove NA submitter values before assessment
+copykat_df <- copykat_df |>
+  tidyr::drop_na(submitter)
 
 # Plot the data:
 compare_copykat_results_barplot(copykat_df) + 
@@ -257,8 +279,8 @@ For `copyKat`, "diploid" is normal and "aneuploid" is tumor.
 
 ```{r}
 copykat_df |>
-  dplyr::select(submitter, submitter_binary, copykat = copykat_euclidian) |>
-  compare_result_tables("euclidian distance") 
+  dplyr::select(submitter, submitter_binary, copykat = copykat_euclidean) |>
+  compare_result_tables("euclidean distance") 
 
 copykat_df |>
   dplyr::select(submitter, submitter_binary, copykat = copykat_pearson) |>
@@ -275,10 +297,10 @@ copykat_df |>
 
 ### Run copyKat
 
-In the previous section, we saw that correlational distance is likely to be better than euclidian.
+In the previous section, we saw that correlational distance is likely to be better than euclidean.
 In this section, we'll again run `copyKat`, **but this time using _only_ the "pearson" distance**, at a variety of `KS.cut` parameters.
 
-As described in the [GitHub `README` file](https://github.com/navinlabcode/copykat/blob/master/README.md), 
+As described in the [GitHub `README` file](https://github.com/navinlabcode/copykat/blob/b795ff793522499f814f6ae282aad1aab790902f/README.md?plain=1#L61), 
 
 > KS.cut is the segmentation parameter, ranging from 0 to 1. Increasing KS.cut decreases sensitivity, i.e. less segments/breakpoints. Usually it works in a range of 0.05-0.15.
 
@@ -286,52 +308,63 @@ For this, we'll start with the SCE from the last section, and build it up from t
 Since it was already run with default `KS.cut = 0.1`, we'll test a few additional values here and compare those to above.
 
 ```{r}
-if (file.exists(copykat_kscut_sce)) {
-  # if the SCE exists, read it in
-  sce <- readr::read_rds(copykat_kscut_sce)
+if (file.exists(copykat_kscut_tsv)) {
+  # if the TSV exists, read it in
+  copykat_df <- readr::read_tsv(copykat_kscut_tsv)
 
-} else if (file.exists(copykat_distance_sce)) {
+} else if (file.exists(copykat_distance_tsv)) {
   
-  # if only the _distance_ SCE exists, read in as a starting point
-  sce <- readr::read_rds(copykat_distance_sce)
+  # if only the _distance_ tsv exists, read in as a starting point
+  copykat_df <- readr::read_tsv(copykat_distance_tsv)
   
   # clean up columns for this analysis
-  sce$copykat_0.1 <- sce$copykat_pearson # no need to redo this one! 
-  sce$copykat_pearson  <- NULL
-  sce$copykat_spearman <- NULL
-  sce$copykat_euclidian <- NULL
+  copykat_df <- copykat_df |>
+    dplyr::select(
+      contains("submitter"),
+      copykat_0.1 = copykat_pearson
+    )
+
+  kscut_values <- seq(0.025, 0.15, 0.025)[-4] # can skip 0.1
   
-  # and run!
-  purrr::walk(
-    seq(0.025, 0.15, 0.025)[-4], # can skip 0.1
+  copykat_results <- purrr::map(
+    kscut_values, 
     \(kscut_value) {
       
       copykat_result <- copykat(
         rawmat = as.matrix(counts(sce)), 
         id.type = "E", # we have Ensembl gene ids, not the default gene symbols ("S")
         sam.name = glue::glue("{params$library_id}-{kscut_value}"), # unique name for each 
-        distance = "pearson", 
+        distance = "pearson",
         KS.cut = kscut_value,
+        # attempt to turn off some outputs..
         plot.genes = FALSE,
+        output.seg = FALSE,
         n.cores = params$threads
       )
-      
-      # save prediction to sce
-      colname <- glue::glue("copykat_{kscut_value}")
-      colData(sce)[[colname]] <- copykat_result$prediction$copykat.pred
       
       # export full result
       output_file <- file.path(output_dir,
                               glue::glue("{params$library}_copykat_{kscut_value}.rds"))
       readr::write_rds(copykat_result, output_file)
+      
+            
+      # return predictions
+      return(copykat_result$prediction$copykat.pred)
     }
   )
   
-  # finally, export SCE with all copykat kscut predictions
-  readr::write_rds(sce, copykat_kscut_sce)
+  names(copykat_results) <- glue::glue("copykat_{kscut_values}")
   
+  # Bind up all the columns
+  copykat_df <- dplyr::bind_cols(
+    copykat_df, 
+    copykat_results
+  )
+  
+  # finally, export TSV with all copykat predictions
+  readr::write_tsv(copykat_df, copykat_kscut_tsv)
 } else {
-  stop("Error: At least one of those SCE files should have existed by now!")
+  stop("Error: At least one of those TSV files should have existed by now!")
 }
 ```
 
@@ -341,19 +374,9 @@ if (file.exists(copykat_kscut_sce)) {
 As before, we'll prepare the data for comparison and begin with a barplot of tumor/normal classifications across `copyKat` parameters:
 
 ```{r, fig.height = 5, fig.width = 4}
-# Prepare data for comparisons
-copykat_df <- colData(sce) |>
-  as.data.frame() |>
-  # better printing 
-  tibble::as_tibble() |>
-  dplyr::select(submitter = celltype, contains("copykat")) |>
-  # remove NA submitter annotations
-  tidyr::drop_na(submitter) |>
-  dplyr::mutate(submitter_binary = ifelse(
-    stringr::str_starts(submitter, "Tumor"), 
-    "Tumor", 
-    "Normal"
-  )) 
+# Remove NA submitter values before assessment
+copykat_df <- copykat_df |>
+  tidyr::drop_na(submitter)
 
 # Plot the data:
 compare_copykat_results_barplot(copykat_df) + 
@@ -391,8 +414,10 @@ It is also worth noting some drawbacks of the `copyKat` package:
   * Of this output, we get a `"cell: #"` printed for each cell, and we also see that the majority also have a printed statement: `"WARNING! NOT CONVERGENT!"`.
   This latter statement is _printed_ from a [dependency](https://github.com/cran/mixtools/blob/4af1e2789bcea7df3c1775a53cd05b37ec3185d0/R/normalmixEM.R#L129-L131) during the `copyKat` step to identify a baseline diploid cell population.
 * There is no clear way to assess confidence from `copyKat` output.
-  * In the `copyKay` paper, they performed bootstrapping to assess performance, which may be something we'll have to do to get some kind of confidence measure. 
-  From the paper, " Bootstrapping was performed to resample single cells and estimate the variation in detection sensitivity. On average, we estimated that 19% of CNAs were detected at 1-Mb resolution, 56% were detected at 5-Mb resolution and 88% were detected at 20-Mb resolution, which agrees with our theoretical calculation of a 5-Mb average genomic resolution."
+  * _That said_, when you run this notebook with the test parameter as `TRUE`, you may notice that cells are no longer annotated `"diploid"` or `"aneuploid"` but instead as `"c1:diploid:low.conf"` and `"c2:aneuploid:low.conf"`, respectively. 
+  For the test runs, `copyKat` was unable to determine a reliable baseline for diploid cells, so everything was annotated as unreliable
+  * This is a form of a "confidence," and as the full SCE does not give these `"low.conf"` annotations, that tells us that `copyKat` feels confident in the results run on the full SCE.
+
 
 
 Based on these drawbacks, if we want to use `copyKat` moving forward, we might consider forking the repository and modifying aspects that best suit our needs:
